--- a/BinWatch/BinWatch/Base.lproj/Main.storyboard
+++ b/BinWatch/BinWatch/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1w8-et-j3Y">
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="1w8-et-j3Y">
                                 <rect key="frame" x="0.0" y="64" width="600" height="44"/>
                                 <animations/>
                                 <constraints>
@@ -29,7 +29,7 @@
                                     <outlet property="delegate" destination="9pv-A4-QxB" id="M3A-vr-6xg"/>
                                 </connections>
                             </searchBar>
-                            <tableView clipsSubviews="YES" tag="1" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Tu3-Qc-1wr">
+                            <tableView clipsSubviews="YES" tag="1" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Tu3-Qc-1wr">
                                 <rect key="frame" x="0.0" y="108" width="600" height="443"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -40,6 +40,7 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="1w8-et-j3Y" secondAttribute="trailing" id="5bD-qH-UXa"/>
                             <constraint firstItem="1w8-et-j3Y" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="8H6-pn-VYR"/>
+                            <constraint firstItem="1w8-et-j3Y" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="CXb-Fg-OGL"/>
                             <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="Tu3-Qc-1wr" secondAttribute="bottom" id="fgg-up-TFg"/>
                             <constraint firstItem="Tu3-Qc-1wr" firstAttribute="top" secondItem="1w8-et-j3Y" secondAttribute="bottom" id="gUA-Hj-MpE"/>
                             <constraint firstItem="Tu3-Qc-1wr" firstAttribute="top" secondItem="1w8-et-j3Y" secondAttribute="bottom" id="m11-1j-8cO"/>
