--- a/BinWatch/BinWatch/Base.lproj/Main.storyboard
+++ b/BinWatch/BinWatch/Base.lproj/Main.storyboard
@@ -115,7 +115,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" tag="111" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="rIp-3W-Ivx">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="334"/>
+                                <rect key="frame" x="0.0" y="108" width="600" height="226"/>
                                 <animations/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
@@ -304,21 +304,43 @@
                                     <constraint firstItem="8tA-q2-Aus" firstAttribute="top" secondItem="z6b-oS-1ht" secondAttribute="bottom" constant="9" id="zod-zf-9B2"/>
                                 </constraints>
                             </view>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="SOY-6N-UBb">
+                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="o0I-lk-Al9" id="GAi-Ov-QBm"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Jwh-OV-ovo" firstAttribute="top" secondItem="7xN-ad-5GM" secondAttribute="bottom" id="04H-SR-BE3"/>
                             <constraint firstItem="7xN-ad-5GM" firstAttribute="leading" secondItem="bjm-f4-9mf" secondAttribute="leading" id="5q8-6d-er5"/>
+                            <constraint firstItem="SOY-6N-UBb" firstAttribute="leading" secondItem="bjm-f4-9mf" secondAttribute="leading" id="7bC-ep-Kbp"/>
+                            <constraint firstItem="Gp4-5l-P6t" firstAttribute="top" secondItem="rIp-3W-Ivx" secondAttribute="bottom" id="8Ne-fv-hCz"/>
                             <constraint firstItem="Gp4-5l-P6t" firstAttribute="leading" secondItem="bjm-f4-9mf" secondAttribute="leading" id="8cJ-6t-uNM"/>
                             <constraint firstAttribute="trailing" secondItem="Gp4-5l-P6t" secondAttribute="trailing" id="Ayf-VU-6td"/>
+                            <constraint firstAttribute="trailing" secondItem="SOY-6N-UBb" secondAttribute="trailing" id="F1i-h1-h04"/>
                             <constraint firstItem="Gp4-5l-P6t" firstAttribute="top" secondItem="rIp-3W-Ivx" secondAttribute="bottom" id="HBP-bm-IfH"/>
                             <constraint firstItem="7xN-ad-5GM" firstAttribute="top" secondItem="Gp4-5l-P6t" secondAttribute="bottom" constant="5" id="Jwq-es-vaX"/>
+                            <constraint firstItem="rIp-3W-Ivx" firstAttribute="leading" secondItem="bjm-f4-9mf" secondAttribute="leading" id="Y3r-BZ-fKv"/>
                             <constraint firstItem="rIp-3W-Ivx" firstAttribute="top" secondItem="6se-1W-Yny" secondAttribute="bottom" constant="-64" id="Y9L-km-6KL"/>
+                            <constraint firstItem="rIp-3W-Ivx" firstAttribute="top" secondItem="SOY-6N-UBb" secondAttribute="bottom" id="gop-hi-9WS"/>
+                            <constraint firstAttribute="trailing" secondItem="rIp-3W-Ivx" secondAttribute="trailing" id="h0m-tY-q5p"/>
                             <constraint firstAttribute="trailing" secondItem="7xN-ad-5GM" secondAttribute="trailing" id="qfM-C3-pGR"/>
+                            <constraint firstItem="SOY-6N-UBb" firstAttribute="top" secondItem="6se-1W-Yny" secondAttribute="bottom" id="tdS-nT-BYc"/>
                             <constraint firstAttribute="trailing" secondItem="rIp-3W-Ivx" secondAttribute="trailing" id="wzx-sK-Rt4"/>
                             <constraint firstItem="rIp-3W-Ivx" firstAttribute="leading" secondItem="bjm-f4-9mf" secondAttribute="leading" id="y4o-Au-ViC"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Y9L-km-6KL"/>
+                                <exclude reference="wzx-sK-Rt4"/>
+                                <exclude reference="y4o-Au-ViC"/>
+                                <exclude reference="HBP-bm-IfH"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Analytics" id="bh7-hU-LH8">
                         <barButtonItem key="leftBarButtonItem" style="done" systemItem="done" id="lSX-3O-wmC">
@@ -330,12 +352,23 @@
                     <connections>
                         <outlet property="dateComponentsContainerView" destination="Gp4-5l-P6t" id="KhV-dU-Me4"/>
                         <outlet property="fromDateBtn" destination="z6b-oS-1ht" id="Ifq-tN-ZwR"/>
+                        <outlet property="searchBarForTableView1" destination="SOY-6N-UBb" id="OYm-nD-4av"/>
+                        <outlet property="searchDisplayController" destination="JIT-cv-hkk" id="mJy-Ph-fHQ"/>
                         <outlet property="tableView1" destination="rIp-3W-Ivx" id="mly-ye-5aT"/>
                         <outlet property="tableView2" destination="7xN-ad-5GM" id="O2v-10-PLO"/>
                         <outlet property="toDateBtn" destination="zAc-kN-D3H" id="gyR-Jp-qIb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cL8-Ge-6VI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="JIT-cv-hkk">
+                    <connections>
+                        <outlet property="delegate" destination="o0I-lk-Al9" id="E42-g4-glj"/>
+                        <outlet property="searchBar" destination="SOY-6N-UBb" id="E1A-XF-oyW"/>
+                        <outlet property="searchContentsController" destination="o0I-lk-Al9" id="Alr-Nq-n3G"/>
+                        <outlet property="searchResultsDataSource" destination="o0I-lk-Al9" id="ek0-Af-BYt"/>
+                        <outlet property="searchResultsDelegate" destination="o0I-lk-Al9" id="EPj-6H-PqO"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="1345" y="1083"/>
         </scene>
