Revert "tableview style grouped instead of plain"
This reverts commit 25460fa66984ed6f286e85d1327c01e754b446aa.

--- a/BinWatch/BinWatch/Base.lproj/Main.storyboard
+++ b/BinWatch/BinWatch/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -114,10 +114,68 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" tag="111" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="rIp-3W-Ivx">
+                            <tableView clipsSubviews="YES" tag="111" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="rIp-3W-Ivx">
                                 <rect key="frame" x="0.0" y="108" width="600" height="226"/>
                                 <animations/>
-                                <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="binCellAnalyse" id="WAt-z8-meF" customClass="BWAnalyseTableViewCell">
+                                        <rect key="frame" x="0.0" y="86" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WAt-z8-meF" id="eqg-sf-exA">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rqG-Zh-i8w">
+                                                    <rect key="frame" x="8" y="8" width="24" height="23.5"/>
+                                                    <animations/>
+                                                    <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <state key="normal" backgroundImage="Button_Unselected">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <state key="selected" backgroundImage="Button_Selected">
+                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="selBtnTapped:" destination="WAt-z8-meF" eventType="touchUpInside" id="wCC-e4-2kF"/>
+                                                        <action selector="selBtnTapped:forEvent:" destination="WAt-z8-meF" eventType="touchUpInside" id="r0c-5V-5JK"/>
+                                                    </connections>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="znu-8y-5ZR">
+                                                    <rect key="frame" x="44" y="8" width="42" height="24"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ypg-Ht-2vy">
+                                                    <rect key="frame" x="538" y="8" width="42" height="20.5"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <animations/>
+                                            <constraints>
+                                                <constraint firstItem="rqG-Zh-i8w" firstAttribute="top" secondItem="eqg-sf-exA" secondAttribute="top" constant="8" id="6Ej-su-j1w"/>
+                                                <constraint firstItem="rqG-Zh-i8w" firstAttribute="leading" secondItem="eqg-sf-exA" secondAttribute="leading" constant="8" id="8rg-Gm-QOl"/>
+                                                <constraint firstItem="Ypg-Ht-2vy" firstAttribute="top" secondItem="eqg-sf-exA" secondAttribute="top" constant="8" id="Ie8-5p-Idn"/>
+                                                <constraint firstItem="znu-8y-5ZR" firstAttribute="leading" secondItem="rqG-Zh-i8w" secondAttribute="trailing" constant="12" id="MCR-Re-zaH"/>
+                                                <constraint firstAttribute="bottom" secondItem="znu-8y-5ZR" secondAttribute="bottom" constant="12" id="MTI-dj-dyz"/>
+                                                <constraint firstAttribute="trailing" secondItem="Ypg-Ht-2vy" secondAttribute="trailing" constant="20" id="pe9-wj-rPP"/>
+                                                <constraint firstItem="znu-8y-5ZR" firstAttribute="top" secondItem="eqg-sf-exA" secondAttribute="top" constant="8" id="pym-Fi-Vo5"/>
+                                                <constraint firstAttribute="bottom" secondItem="rqG-Zh-i8w" secondAttribute="bottom" constant="12" id="xEn-93-3pq"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                        <connections>
+                                            <outlet property="binDetailsLabel" destination="znu-8y-5ZR" id="LYX-JU-Oo6"/>
+                                            <outlet property="fillPercentLabel" destination="Ypg-Ht-2vy" id="VRd-Og-pyv"/>
+                                            <outlet property="selectionBtn" destination="rqG-Zh-i8w" id="3cg-EJ-3ho"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="o0I-lk-Al9" id="jeF-Ud-uux"/>
                                     <outlet property="delegate" destination="o0I-lk-Al9" id="Jy0-h3-h07"/>
